==> ArduPilot/ardupilot/modules/ChibiOS/os/hal/ports/ADUCM/LLD/UARTv1/hal_serial_lld.c <==
#include "hal.h"

static void set_error(SerialDriver *sdp, uint32_t lsr) {
  eventflags_t sts = 0;

  if (lsr & ADUCM_UART_LSR_OE)
    sts |= SD_OVERRUN_ERROR;
  if (lsr & ADUCM_UART_LSR_PE)
    sts |= SD_PARITY_ERROR;
  if (lsr & ADUCM_UART_LSR_FE)
    sts |= SD_FRAMING_ERROR;
  osalSysLockFromISR();
  chnAddFlagsI(sdp, sts);
  osalSysUnlockFromISR();
}

static void notify1(io_queue_t *qp) {

  (void)qp;
  UART1->IEN |= ADUCM_UART_IEN_ETBEI;
}

void sd_lld_init(void) {

#if ADUCM_SERIAL_USE_UART0
  sdObjectInit(&SD0);
  iqObjectInit(&SD0.iqueue, sd_in_buf0, sizeof sd_in_buf0, NULL, &SD0);
  oqObjectInit(&SD0.oqueue, sd_out_buf0, sizeof sd_out_buf0, notify0, &SD0);
  SD0.uart = UART0;
  SD0.clock = ADUCM_UART0CLK;
#if defined(ADUCM_SERIAL_UART0_PRIORITY)
  nvicEnableVector(ADUCM_UART0_NUMBER, ADUCM_SERIAL_UART0_PRIORITY); 
#endif
#endif

#if ADUCM_SERIAL_USE_UART1
  sdObjectInit(&SD1);
  iqObjectInit(&SD1.iqueue, sd_in_buf1, sizeof sd_in_buf1, NULL, &SD1);
  oqObjectInit(&SD1.oqueue, sd_out_buf1, sizeof sd_out_buf1, notify1, &SD1);
  SD1.uart = UART1;
  SD1.clock = ADUCM_UART1CLK;
#if defined(ADUCM_SERIAL_UART1_PRIORITY)
  nvicEnableVector(ADUCM_UART1_NUMBER, ADUCM_SERIAL_UART1_PRIORITY); 
#endif
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL) {
    config = &default_config;
  }

  if (sdp->state == SD_STOP) {
#if ADUCM_SERIAL_USE_UART0 && !ADUCM_HAS_CLK_AUTOGATE
    if (&SD0 == sdp) {
      ccEnableUART0();
    }
#endif

#if ADUCM_SERIAL_USE_UART1 && !ADUCM_HAS_CLK_AUTOGATE
    if (&SD1 == sdp) {
      ccEnableUART1();
    }
#endif
  }
  uart_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {
    /* UART is de-initialized then clocks are disabled.*/
    uart_deinit(sdp);

#if ADUCM_SERIAL_USE_UART0 && !ADUCM_HAS_CLK_AUTOGATE
    if (&SD0 == sdp) {
      ccDisableUART0();
      return;
    }
#endif

#if ADUCM_SERIAL_USE_UART1 && !ADUCM_HAS_CLK_AUTOGATE
    if (&SD1 == sdp) {
      ccDisableUART1();
      return;
    }
#endif
  }
}

void sd_lld_serve_interrupt(SerialDriver *sdp) {
  uint32_t irr = sdp->uart->IIR;
  uint32_t ien = sdp->uart->IEN;
  
  if(!(irr & ADUCM_UART_IIR_NINT)) {
    if(irr == ADUCM_UART_IIR_STA_MODEM) {
      volatile uint32_t msr;

      /* Clearing the interrupt. */
      msr = sdp->uart->MSR;

     (void) msr;
    }
    
    /* Data available, note it is a while in order to handle two situations:
       1) Another byte arrived after removing the previous one, this would cause
          an extra interrupt to serve.
       2) FIFO mode is enabled on devices that support it, we need to empty
          the FIFO.*/
    while (irr & ADUCM_UART_IIR_STA_RX_FULL) {
      osalSysLockFromISR();
      sdIncomingDataI(sdp, (uint8_t)sdp->uart->DATA);
      osalSysUnlockFromISR();

      irr = sdp->uart->IIR;
    }

    /* Transmission buffer empty, note it is a while in order to handle two
       situations:
       1) The data registers has been emptied immediately after writing it, this
          would cause an extra interrupt to serve.
       2) FIFO mode is enabled on devices that support it, we need to fill
          the FIFO.*/
    if (ien & ADUCM_UART_IEN_ETBEI) {
      while (irr & ADUCM_UART_IIR_STA_TX_EMPTY) {
        msg_t b;

        osalSysLockFromISR();
        b = oqGetI(&sdp->oqueue);
        if (b < MSG_OK) {
          chnAddFlagsI(sdp, CHN_OUTPUT_EMPTY);
          sdp->uart->IEN = ien & ~ADUCM_UART_IEN_ETBEI;
          osalSysUnlockFromISR();
          break;
        }
        sdp->uart->DATA = b;
        osalSysUnlockFromISR();
  
        irr = sdp->uart->IIR;
      }
    }
    
    if(irr == ADUCM_UART_IIR_STA_LINE) {
      uint32_t lsr;

      /* Clearing the interrupt. */
      lsr = sdp->uart->LSR;

      /* Error handling. */
      if(lsr & (ADUCM_UART_LSR_FE | ADUCM_UART_LSR_PE | ADUCM_UART_LSR_OE)) {
        set_error(sdp, lsr);
      }

      /* Physical transmission end.*/
      if (lsr & ADUCM_UART_LSR_TEMT) {
        osalSysLockFromISR();
        if (oqIsEmptyI(&sdp->oqueue)) {
          chnAddFlagsI(sdp, CHN_TRANSMISSION_END);
        }
        osalSysUnlockFromISR();
      }
    }
  } 
}
